# rag_project_ravet

./: README.md  app.py  pyproject.toml  requirements.txt
chroma_db_genai.pdf/: chroma.sqlite3
chroma_db_resume.pdf/: chroma.sqlite3
